corrected styles and files for sidebar, made collapse components for rendering code params

--- a/styles/utils/_mixins.scss
+++ b/styles/utils/_mixins.scss
@@ -90,6 +90,25 @@
   }
 }
 
+@mixin collapse-heading-code() {
+  font-family: IBM Plex Mono, sans-serif;
+  @include generatePxToRem('font-size', 12);
+  font-style: normal;
+  font-weight: 400;
+  @include generatePxToRem('line-height', 20);
+  @include generatePxToRem('letter-spacing', -0.088);
+}
+
+@mixin collapse-children-heading-text() {
+  color: var(--heading-h5-color);
+  font-family: Inter, sans-serif;
+  @include generatePxToRem('font-size', 12);
+  font-style: normal;
+  font-weight: 400;
+  @include generatePxToRem('line-height', 20);
+  @include generatePxToRem('letter-spacing', -0.088);
+}
+
 @mixin code() {
   color: var(--primary-code-color);
   background: none;
